--- a/app/views/navigation/home.html.erb
+++ b/app/views/navigation/home.html.erb
@@ -1,2 +1,25 @@
-<h1>Navigation#home</h1>
-<p>Find me in app/views/navigation/home.html.erb</p>
+
+<%= render("nav_bar")%>
+
+<div>
+    <h1>Welcome</h1>
+    <p>Digx7 is a game devoloper who likes making stuff and documenting the process<br>This site is where you can find all their projects and articles</p>
+</div>
+<div>
+    <h1>Projects</h1>
+    <ul>
+        
+    </ul>
+</div>
+<div>
+    <h1>Articles</h1>
+</div>
+<div>
+    <h1>About</h1>
+</div>
+<div>
+    <h1>Support</h1>
+</div>
+<div>
+    <h1>Contact</h1>
+</div>
