Still working on views

--- a/app/views/admin/manage_posts.html.erb
+++ b/app/views/admin/manage_posts.html.erb
@@ -1,1 +1,9 @@
 <%= render("nav_bar")%>
+
+<ul>
+    <% @posts.each do |post| %>
+        <li>
+            <%= render partial: "posts/admin_entry", locals: {post: post} %>
+        </li>
+    <% end %>
+</ul>
