--- a/app/views/admin/manage_users.html.erb
+++ b/app/views/admin/manage_users.html.erb
@@ -1,1 +1,9 @@
 <%= render("nav_bar")%>
+
+<ul>
+    <% @users.each do |user| %>
+        <li>
+            <%= render partial: "users/admin_entry", locals: {post: user} %>
+        </li>
+    <% end %>
+</ul>
