--- a/app/views/posts/_admin_entry.html.erb
+++ b/app/views/posts/_admin_entry.html.erb
@@ -4,5 +4,8 @@
         <p> <%= post.subtitle %> </p>
         <p> <%= post.updated_at %> </p>
         <p> <%= post.blog_type_id %> </p>
+        <p> <%= post.blog_status_id %> </p>
+        <p> EDIT <p>
+        <p> Delete <p>
     </div>
 </a>
