working on views
The following views need to be worked on
- all account views (login, signup, change password, and other views to adjust based on user role)
- all comments views (being able to be shown, edited, reacted to, and deleted)
- search, and filter functionality

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,22 +1,22 @@
 <div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
+  
+  <div id="Post_Heading">
+    <h1> <%= post.title %> </h1>
+    <h2> <%= post.subtitle %> </h2>
+    <p> <%= post.blog_type_id %> </p>
+    <p> <%= post.updated_at %> </p>
+    <p> <%= post.created_at %> </p>
+  <div>
 
-  <p>
-    <strong>Subtitle:</strong>
-    <%= post.subtitle %>
-  </p>
+  <div id="Post_Sidbar">
+    <p>Sidbar</p>
+  </div>
+  
+  <div id="Post_Video">
+    <p>Video</p>
+  </div>
 
-  <p>
-    <strong>Video link:</strong>
-    <%= post.video_link %>
-  </p>
-
-  <p>
-    <strong>Content:</strong>
+  <div id="Post_Content">
     <%= post.content %>
-  </p>
-
+  </div>
 </div>
