--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,9 @@
 
 <%= render @post %>
 
+<div id="Post_Comments">
+  <h2> Comments </h2>
+<div>
 <!--
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
