--- a/app/views/posts/_admin_entry.html.erb
+++ b/app/views/posts/_admin_entry.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= post_path(post) %>">
+<a href="<%= edit_post_path(post) %>">
     <div id="<%= dom_id post %>">
         <h2> <%= post.title %> </h2>
         <p> <%= post.subtitle %> </p>
